# TheiaSfM

./: .gitmodules  parallel_exec.py  run_batch.py  run_batch_example.py  run_exp.py  run_experiments.sh  run_report.py
applications/: CMakeLists.txt  build_reconstruction.cc  command_line_helpers.h  compare_reconstructions.cc  exp_bounding_box_utils.cc  exp_bounding_box_utils.h  exp_build_reconstruction.cc  exp_camera_param_io.cc  exp_camera_param_io.h  exp_camera_param_utils.cc  exp_camera_param_utils.h  exp_compare_camera_poses.cc  exp_compare_cameras.cc  exp_compare_modelviews.cc  exp_compare_orientations.cc  exp_compare_relative_orientations.cc  exp_convert_feature_track_file.cc  exp_create_reconstruction_from_modelviews.cc  exp_draw_feature_tracks.cc  exp_draw_matches.cc  exp_drawing_utils.cc  exp_drawing_utils.h  exp_evaluate_neural_net_output.cc  exp_evaluate_neural_net_outputs.cc  exp_export_camera_view_directions.cc  exp_export_camera_view_directions_from_bboxes.cc  exp_export_cameras.cc  exp_export_modelviews.cc  exp_export_orientations.cc  exp_extract_match_info.cc  exp_feature_match_utils.cc  exp_feature_match_utils.h  exp_feature_track_io.cc  exp_feature_track_io.h  exp_json_utils.h  exp_match_features.cc  exp_match_objects_using_feature_tracks.cc  exp_matrix_utils.h  exp_neural_net_output_reader.cc  exp_neural_net_output_reader.h  (+8 more)
datasets/7-scenes/: README  batch_preprocessing.sh  convert_pose_files.py  create_image_sequence_video.sh  download.sh  organize_data.sh
script/: calibration.py  draw_bboxes.py  evaluation.py  feature.py  get_sun3d_data.py  ground_truth.py  image_list.py  match.py  match_info.py  options.py  orientation.py  parallel_exec.py  plot.py  plot_convnet.py  plot_data.py  plot_utils.py  reconstruction.py  run_cmd.py  run_convnet.py  run_convnet_report.py  run_csv_report.py  run_csv_stats.py  run_exp.py  run_interpolate.py  run_interpolate_bboxes.py  run_interpolate_camera_params.py  run_latex_report.py  run_mix_camera_params.py  run_plot.py  track.py
script/RenderForCNN/: class_names_object3dnet.txt  composite_all.py  composite_multi.py  composite_object.py  estimate.py  estimate_best_multi.py  estimate_pred.py  estimate_scores.py  estimate_scores_multi.py  evaluation_helper_custom.py  example.sh  example_multi.sh  example_subcnn.sh  find_largest.py  render_all.py  render_multi.py  render_object.py  seam_fitting_multi.py
script/RenderForCNN/multi/: class_names.txt  cnn_utils.py  composite_best_multi.py  composite_multi.py  estimate_best_multi.py  estimate_scores_multi.py  example_multi.sh  render_best_multi.py  render_multi.py  seam_fitting_multi.py
script/RenderForCNN/sample_model/: bicycle.obj.mtl  boat.obj.mtl  bottle.obj.mtl  bus.obj.mtl  car.obj.mtl  chair.obj.mtl  model_source.txt  sofa.obj.mtl  tvmonitor.obj.mtl
script/RenderForCNN/single_target/: composite_all.py  composite_object.py  example.sh
script/SORT/: sort.py  sort_multi.py
script/SORT/multi/: sort_multi.py
script/SORT/single_target/: sort.py
script/datasets/ICL-NUIM/: convert_extrinsics_tum_format.py
script/datasets/sun3d/: convert_extrinsics.py  download_sun3d_data.sh  get_sun3d_data.py
script/py-faster-rcnn/: crop_multi.py  detect.py  detect_multi.py
script/py-faster-rcnn/multi/: crop_multi.py  detect_multi.py
script/py-faster-rcnn/single_target/: detect.py
script/sun3d/: convert_extrinsics.py
script/tools/: lib_result_report.py  run_draw_bboxes.py  run_interpolate_camera_params.py
src/theia/: CMakeLists.txt
src/theia/matching/: cascade_hashing_feature_matcher.cc  cascade_hashing_feature_matcher.h  feature_matcher.cc  feature_matcher.h  feature_matcher_options.h
src/theia/sfm/: estimate_twoview_info.cc  estimate_twoview_info.h  exp_bundle_adjustment_only_estimator.cc  exp_bundle_adjustment_only_estimator.h  exp_global_reconstruction_estimator.cc  exp_global_reconstruction_estimator.h  feature_extractor_and_matcher.cc  feature_extractor_and_matcher.h  filter_view_pairs_from_orientation.h  global_reconstruction_estimator.cc  global_reconstruction_estimator.h  object_view_constraint.h  pose_error.h  reconstruction.h  reconstruction_builder.cc  reconstruction_builder.h  reconstruction_estimator.cc  reconstruction_estimator_options.h  reconstruction_estimator_utils.cc  two_view_match_geometric_verification.cc  two_view_match_geometric_verification.h  twoview_info.h  view.cc  view.h
src/theia/sfm/bundle_adjustment/: bundle_consecutive_camera_error.h  bundle_object_position_error.h  bundle_object_rotation_error.h  constrained_bundle_adjustment.cc  constrained_bundle_adjustment.h
src/theia/sfm/estimators/: estimate_constrained_relative_pose.cc  estimate_constrained_relative_pose.h  estimate_relative_pose.h
src/theia/sfm/global_pose_estimation/: constrained_nonlinear_position_estimator.cc  constrained_nonlinear_position_estimator.h  constrained_robust_rotation_estimator.cc  constrained_robust_rotation_estimator.h  least_unsquared_deviation_position_estimator.cc  nonlinear_position_estimator.cc  nonlinear_position_estimator.h  pairwise_position_error.cc  pairwise_position_error.h  robust_rotation_estimator.cc  robust_rotation_estimator.h  single_translation_error.cc  single_translation_error.h
src/theia/sfm/transformation/: align_reconstructions.cc
src/theia/sfm/view_graph/: orientations_from_maximum_spanning_tree.cc  orientations_from_maximum_spanning_tree.h
src/theia/solvers/: sample_consensus_estimator.h
src/theia/util/: random.cc  random.h
